--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,7 +26,7 @@
 		<tr>
 			
 			<th>Letra introducida</th>
-			<th>¿Letra encontrada?</th>
+			<th>Hora de introducción de letra</th>
 			
 		</tr>
 		</tbody>
